# Crispen

./: .editorconfig  .gitignore  .gitmodules  AGENT-PROMPTS.md  Cargo.toml  Makefile  PLAN.md  README.md  UI-AGENT-PROMPTS.md  UI-PLAN.md  launcher.sh
.github/workflows/: ci.yml
crates/crispen-bevy/: Cargo.toml
crates/crispen-bevy/src/: README.md  events.rs  lib.rs  render_node.rs  resources.rs  scope_render.rs  systems.rs
crates/crispen-cef-helper/: Cargo.toml
crates/crispen-cef-helper/src/: main.rs
crates/crispen-core/: Cargo.toml
crates/crispen-core/src/: image.rs  lib.rs
crates/crispen-core/src/color_management/: README.md  aces.rs  color_space.rs  mod.rs  transfer.rs  white_balance.rs
crates/crispen-core/src/grading/: README.md  auto_balance.rs  curves.rs  mod.rs  sliders.rs  wheels.rs
crates/crispen-core/src/scopes/: README.md  cie.rs  histogram.rs  mod.rs  parade.rs  vectorscope.rs  waveform.rs
crates/crispen-core/src/transform/: README.md  evaluate.rs  lut.rs  mod.rs  params.rs
crates/crispen-demo/: Cargo.toml
crates/crispen-demo/src/: README.md  cef_bridge.rs  config.rs  embedded_ui.rs  image_loader.rs  ipc.rs  layout_sync.rs  main.rs  ocio_support.rs  ws_bridge.rs
crates/crispen-demo/src/input/: hotkeys.rs  keyboard.rs  mod.rs  mouse.rs
crates/crispen-demo/src/render/: mod.rs
crates/crispen-demo/src/ui/: color_wheel.rs  components.rs  dial.rs  hue_curves.rs  layout.rs  master_slider.rs  mod.rs  ocio_controls.rs  ofx_panel.rs  primaries.rs  scope_mask.rs  split_viewer.rs  systems.rs  theme.rs  toolbar.rs  vectorscope.rs  viewer.rs  viewer_nav.rs
crates/crispen-demo/src/ui/shaders/: color_wheel.wgsl  dial.wgsl  master_slider.wgsl
crates/crispen-demo/ui/: .editorconfig  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/crispen-demo/ui/src/: App.svelte  main.ts  theme.css
crates/crispen-demo/ui/src/lib/: bridge.ts  theme.ts  types.ts
crates/crispen-demo/ui/src/lib/components/: ColorSpaceSelector.svelte  ColorWheels.svelte  CurveEditor.svelte  PrimaryBars.svelte  README.md  ScopeDisplay.svelte  Sliders.svelte
crates/crispen-demo/ui/src/lib/docking/: DockviewContainer.svelte  dockview-theme.css
crates/crispen-demo/ui/src/lib/docking/panels/: BevyPanel.svelte  ColorWheelsPanel.svelte  CurvesPanel.svelte  PrimaryBarsPanel.svelte  ScopesPanel.svelte  SlidersPanel.svelte  ToolbarPanel.svelte
crates/crispen-frontend-cef/: Cargo.toml
crates/crispen-frontend-cef/src/: browser.rs  capture.rs  devtools.rs  lib.rs
crates/crispen-frontend-core/: Cargo.toml
crates/crispen-frontend-core/src/: lib.rs
crates/crispen-gpu/: Cargo.toml
crates/crispen-gpu/shaders/: README.md  apply_lut.wgsl  bake_lut.wgsl  cie.wgsl  format_convert.wgsl  histogram.wgsl  linear_to_srgb.wgsl  midtone_detail.wgsl  vectorscope.wgsl  waveform.wgsl
crates/crispen-gpu/src/: README.md  async_readback.rs  buffers.rs  format_converter.rs  lib.rs  lut_applicator.rs  lut_baker.rs  pipeline.rs  readback.rs  scope_dispatch.rs  vulkan_interop.rs
crates/crispen-gpu/tests/: gpu_reference.rs
crates/crispen-ocio/: Cargo.toml  README.md  build.rs
crates/crispen-ocio/csrc/: ocio_capi.cpp  ocio_capi.h
crates/crispen-ocio/src/: config.rs  error.rs  lib.rs  processor.rs  sys.rs
crates/crispen-ocio/tests/: ocio_integration.rs
crates/crispen-ofx/: Cargo.toml
crates/crispen-ofx/src/: host.rs  lib.rs
crates/crispen-oiio/: Cargo.toml  build.rs
crates/crispen-oiio/csrc/: oiio_capi.cpp  oiio_capi.h
crates/crispen-oiio/src/: error.rs  image_input.rs  lib.rs  sys.rs
