[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Core
bevy = { version = "0.18", default-features = false }
wgpu = "27"
glam = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
bytemuck = { version = "1.21", features = ["derive"] }
parking_lot = "0.12"

# Image handling
image = "0.25"
palette = "0.7"

# OpenFX
openfx-sys = "0.1"

# Webview
wry = "0.53"

# Networking
tokio = { version = "1.44", features = ["sync", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
