[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Core
bevy = { version = "0.18", default-features = false }
wgpu = "27"
glam = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
bytemuck = { version = "1.21", features = ["derive"] }
parking_lot = "0.12"

# Image handling
image = "0.25"
palette = "0.7"

# OpenFX
openfx-sys = "0.1"

# File dialog
rfd = "0.15"

# Webview / CEF
wry = "0.53"
cef = "143.7"
urlencoding = "2.1"

# Networking
tokio = { version = "1.44", features = ["sync", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"

# ── Build profiles ──────────────────────────────────────────────

# Optimize dependencies in dev builds so wgpu/bytemuck/glam don't crawl.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
