[package]
name = "crispen-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
palette = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
