[package]
name = "crispen-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ocio"]
ocio = ["crispen-bevy/ocio", "dep:crispen-ocio", "dep:crispen-oiio"]

[dependencies]
crispen-core = { path = "../crispen-core" }
crispen-bevy = { path = "../crispen-bevy" }
crispen-ofx = { path = "../crispen-ofx" }
crispen-ocio = { path = "../crispen-ocio", optional = true }
crispen-oiio = { path = "../crispen-oiio", optional = true }
bevy = { workspace = true, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_picking",
    "bevy_input_focus",
    "ui_picking",
    "experimental_bevy_ui_widgets",
    "bevy_winit",
    "default_font",
    "wayland",
    "x11",
] }
serde = { workspace = true }
serde_json = { workspace = true }
wry = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
rfd = { workspace = true }
bytemuck = { workspace = true }

[lints]
workspace = true
