[package]
name = "crispen-frontend-cef"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEF (Chromium Embedded Framework) backend for Crispen"

[dependencies]
crispen-frontend-core = { path = "../crispen-frontend-core" }
cef = { workspace = true }
urlencoding = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
