[package]
name = "crispen-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispen-core = { path = "../crispen-core" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
pollster = "0.4"

[lints]
workspace = true
